# 1inch-near

./: .gitignore  Cargo.toml  QUICK-START.md  README-1INCH-IMPLEMENTATION.md  README.md  SETUP-GUIDE.md  demo-cross-chain.js  demo-enhanced-resolver.js  demo.js  makefile  quick-start.sh
contracts/cross-chain-bridge/: Cargo.toml
contracts/cross-chain-bridge/src/: events.rs  ext.rs  lib.rs  types.rs
contracts/cross-chain-escrow/: Cargo.toml
contracts/cross-chain-escrow/src/: events.rs  ext.rs  lib.rs  timelocks.rs  types.rs
contracts/enhanced-resolver/: Cargo.toml
contracts/enhanced-resolver/src/: events.rs  ext.rs  lib.rs  types.rs
contracts/limit-order-protocol/: Cargo.toml
contracts/limit-order-protocol/src/: events.rs  ext.rs  lib.rs  order.rs  types.rs
contracts/solver-registry/src/: events.rs  lib.rs  pool.rs  types.rs  view.rs
sdk/: package.json  pnpm-lock.yaml
sdk/src/: cross-chain-bridge.ts  cross-chain-escrow.ts  enhanced-resolver.ts  index.ts  limit-order-protocol.ts  sdk.ts  solver-registry.ts
sdk/src/integration/: 1inch-integration.ts
sdk/src/types/: cross-chain-bridge.ts  cross-chain.ts  enhanced-resolver.ts  limit-order.ts  solver-registry.ts
sdk/src/utils/: amounts.ts  crypto.ts
