[package]
name = "cross-chain-escrow"
description = "1inch Cross-chain Escrow for NEAR"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.14.0"
hex = "0.4.3"
serde_json = "1.0.140"
sha2 = "0.10.8"

[dev-dependencies]
near-sdk = { version = "5.14.0", features = ["unit-testing"] }
near-contract-standards = "5.14.0"
tokio = "1.44.1"
anyhow = "1.0.97"
near-workspaces = { version = "0.20.1", features = ["unstable"]}
near-gas = "0.3.0" 